# coop-rust

./: .gitignore  .travis.yml  Cargo.toml  README.md  Vagrantfile
contrib/: coop-completion.bash
scripts/: bash_completion.sh  package.sh  release.sh
src/: main.rs
src/coop/: api.rs  data.rs  io.rs  locations.rs  menu.rs  mod.rs  time.rs
src/coop/commands/: dish_stats.rs  locations.rs  menus.rs  mod.rs
